fix for products/comments/brands not stretching to full vw width/ fix logo not centered

--- a/src/scss/benefits.scss
+++ b/src/scss/benefits.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     padding: 1.25rem 0;
     font-size: 0.875rem;
-    margin: 0 -1.31rem;
+    margin: 0 -1.31251rem;
     gap: 0.2rem;
     @media(min-width:75rem) {
         display: flex;
