--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -131,7 +131,7 @@
 
         .join-us {
             span {
-                padding-bottom: 0.3rem;
+                padding-bottom: 0.3125rem;
             }
 
             .subscribe {
