--- a/src/scss/offers.scss
+++ b/src/scss/offers.scss
@@ -21,7 +21,7 @@
     }
 
     .shop-btn {
-        margin-top: 0.3rem;
+        margin-top: 0.3125rem;
 
         @media(min-width:75rem) {
             margin-top: 3.19rem;
